United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6916062 assert(_inserts <= _insert_limit,"hash table overflow") in NodeHash::hash_insert with debug build
6916062 : assert(_inserts <= _insert_limit,"hash table overflow") in NodeHash::hash_insert with debug build

Details
Type:
Bug
Submit Date:
2010-01-12
Status:
Resolved
Updated Date:
2012-04-17
Project Name:
JDK
Resolved Date:
2010-11-16
Component:
hotspot
OS:
windows_2003,generic,solaris_10
Sub-Component:
compiler
CPU:
x86,sparc,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
e6u18,hs16,6u18
Fixed Versions:
6u22-rev

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Duplicate:
Duplicate:
Duplicate:
Relates:

Sub Tasks

Description
Fastdebug VM crashes with

#  Internal Error (/BUILD_AREA/jdk6_18/hotspot/src/share/vm/opto/phaseX.hpp:66), pid=14269, tid=139697073654096
#  Error: assert(_inserts <= _insert_limit,"hash table overflow")
#
# JRE version: 6.0_18-b07
# Java VM: Java HotSpot(TM) 64-Bit Server VM (16.0-b13-fastdebug mixed mode linux-amd64 )


Current thread (0x00007f0dbc03a000):  JavaThread "CompilerThread0" daemon [_thread_in_native, id=14321, stack(0x00007f0dc2638000,0x00007f0dc2739000)]

Stack: [0x00007f0dc2638000,0x00007f0dc2739000],  sp=0x00007f0dc2731310,  free space=3e40000000000000018k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xb84abc];;  VMError::report_and_die()+0x26c
V  [libjvm.so+0x48fa9e];;  report_assertion_failure(char const*, int, char const*)+0x6e
V  [libjvm.so+0x9cd019];;  NodeHash::hash_insert(Node*)+0x139
V  [libjvm.so+0x9cd26d];;  NodeHash::grow()+0xad
V  [libjvm.so+0x9ccdd4];;  NodeHash::hash_find_insert(Node*)+0x184
V  [libjvm.so+0x9d1e95];;  PhaseIterGVN::transform_old(Node*)+0x425
V  [libjvm.so+0x9d0e7c];;  PhaseIterGVN::optimize()+0x14c
V  [libjvm.so+0x413a2b];;  Compile::Optimize()+0x85b
V  [libjvm.so+0x40ddbe];;  Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool)+0x9ee
V  [libjvm.so+0x330c34];;  C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0xa4
V  [libjvm.so+0x41fd39];;  CompileBroker::invoke_compiler_on_method(CompileTask*)+0x4d9
V  [libjvm.so+0x41f14d];;  CompileBroker::compiler_thread_loop()+0x55d
V  [libjvm.so+0xb1e883];;  compiler_thread_entry(JavaThread*, Thread*)+0x13
V  [libjvm.so+0xb13d15];;  JavaThread::thread_main_inner()+0xd5
V  [libjvm.so+0xb13bdd];;  JavaThread::run()+0xfd
V  [libjvm.so+0x9754c6];;  java_start(Thread*)+0x166

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/56601ef83436
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/hsx/hsx19/baseline/rev/9a19ee0490e0
                                     
2010-10-08
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/56601ef83436
                                     
2010-10-01



Hardware and Software, Engineered to Work Together