6916062: assert(_inserts <= _insert_limit,"hash table overflow") in NodeHash::hash_insert

Missing check for not empty worklist when puting memory node back on worklist and expecting address type update.

Reviewed-by: never